--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLiCamDo
 excludes=
+file.reference.Downloads-jtds-1.3.1-dist=C:\\Users\\thuyd\\Downloads\\jtds-1.3.1-dist
 file.reference.mssql-jdbc-9.4.1.jre16.jar=D:\\Apache-NetBeans-12.4-bin-windows-x64\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.1.jre16.jar
+file.reference.mssql-jdbc-9.4.1.jre16.jar-1=C:\\Users\\thuyd\\Downloads\\sqljdbc_9.4.1.0_enu\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.1.jre16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mssql-jdbc-9.4.1.jre16.jar}
+    ${file.reference.mssql-jdbc-9.4.1.jre16.jar}:\
+    ${file.reference.mssql-jdbc-9.4.1.jre16.jar-1}:\
+    ${file.reference.Downloads-jtds-1.3.1-dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
